--- a/web/src/scss/_pipeline.scss
+++ b/web/src/scss/_pipeline.scss
@@ -144,16 +144,20 @@
     th {
         border: solid 1px #cad0d8;
         background: map-get($colors , whiteColor );
-        position: -ms-page;
-        svg {
+        position: relative;
+        div {
             @include transition(all ease 0.3s);
-            font-size: 18px;
-            position: absolute;
+            position: relative;
             padding-left: 5px;
             display: inline-block;
-            right: 4px;
             height: 100%;
-            top: 0;
+            top: auto;
+            float: right;
+        }
+        svg {
+            position: absolute;
+            right: -8px;
+            top: 2px;
             &:before {
                 top: 38%;
                 position: relative;
@@ -210,7 +214,8 @@
         padding-top: 4px;
     }
     span {
-        button {
+        button, a {
+            text-decoration: none;
             &.active {
                 background: #69BE28;
                 color: #fff;
